--- a/index.html
+++ b/index.html
@@ -1,11 +1,93 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Teachable Machine Image Model with Upload</title>
+    <style>
+        #label-container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            margin-top: 20px;
+        }
+        #label-container div{
+         font-size: 20px;
+         font-weight: bold;
+        }
+        #imagePreview {
+            height: 300px;
+            display: none;
+            margin-top: 20px;
+        }
+
+        #imageUpload {
+            margin-top: 20px;
+        }
+    </style>
 </head>
 <body>
-    
+    <div style="text-align: center;">
+        <h2>Teachable Machine Image Model with Upload</h2>
+        <div id="label-container"></div>
+        <img id="imagePreview" />
+        <input id="imageUpload" type="file" />
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8/dist/teachablemachine-image.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script type="text/javascript">
+        document.addEventListener("DOMContentLoaded", function(event) {
+            // the link to your model provided by Teachable Machine export panel
+            const URL = 'https://teachablemachine.withgoogle.com/models/EOEzsbnRG/';
+
+            let model, labelContainer, maxPredictions;
+
+            // Load the image model 
+            async function init() {
+                const modelURL = URL + 'model.json';
+                const metadataURL = URL + 'metadata.json';
+
+                // load the model and metadata
+                model = await tmImage.load(modelURL, metadataURL);
+                maxPredictions = model.getTotalClasses();
+
+                labelContainer = document.getElementById('label-container');
+                for (let i = 0; i < maxPredictions; i++) {
+                    // and class labels
+                    labelContainer.appendChild(document.createElement('div'));
+                }
+            }
+
+            async function predict() {
+                // predict can take in an image, video or canvas html element
+                var image = document.getElementById('imagePreview');
+                const prediction = await model.predict(image, false);
+                for (let i = 0; i < maxPredictions; i++) {
+                    const classPrediction =
+                        prediction[i].className + ': ' + prediction[i].probability.toFixed(2);
+                    labelContainer.childNodes[i].innerHTML = classPrediction;
+                }
+            }
+
+            function readURL(input) {
+                if (input.files && input.files[0]) {
+                    var reader = new FileReader();
+                    reader.onload = function (e) {
+                        $('#imagePreview').attr('src', e.target.result);
+                        $('#imagePreview').hide();
+                        $('#imagePreview').fadeIn(650);
+                    };
+                    reader.readAsDataURL(input.files[0]);
+                    init().then(() => {
+                        predict();
+                    });
+                }
+            }
+            
+            $('#imageUpload').change(function () {
+                readURL(this);
+            });
+        });
+    </script>
 </body>
 </html>
